--- a/CarWash.csproj
+++ b/CarWash.csproj
@@ -83,11 +83,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\ColumnInfo.cs" />
     <Compile Include="Database\DatabaseHelper.cs" />
     <Compile Include="Database\DatabaseQueryLDB.cs" />
+    <Compile Include="DTOs\DashboardOperadoresDTO.cs" />
     <Compile Include="DTOs\GestionVehiculosDTO.cs" />
     <Compile Include="DTOs\IngresoVehiculoDTO.cs" />
     <Compile Include="DTOs\OperariosDTO.cs" />
+    <Compile Include="Entidades\CajaDiaria.cs" />
+    <Compile Include="Entidades\JornadaOperario.cs" />
     <Compile Include="Entidades\Modulo.cs" />
     <Compile Include="Entidades\Operarios.cs" />
     <Compile Include="Entidades\Perfil.cs" />
@@ -100,6 +104,18 @@
     <Compile Include="Entidades\TurnosDiarios.cs" />
     <Compile Include="Entidades\Usuario.cs" />
     <Compile Include="ModelosRespuestas\RespuestaUsuarioLogin.cs" />
+    <Compile Include="Presentacion\Administracion\FrmAperturaCaja.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\Administracion\FrmAperturaCaja.Designer.cs">
+      <DependentUpon>FrmAperturaCaja.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Presentacion\Administracion\FrmCierreCaja.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\Administracion\FrmCierreCaja.Designer.cs">
+      <DependentUpon>FrmCierreCaja.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\Login\FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +157,12 @@
     <Compile Include="Utilidades\clsConnection.cs" />
     <Compile Include="Utilidades\FunctionsEncrip.cs" />
     <Compile Include="Utilidades\UIHelper.cs" />
+    <EmbeddedResource Include="Presentacion\Administracion\FrmAperturaCaja.resx">
+      <DependentUpon>FrmAperturaCaja.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\Administracion\FrmCierreCaja.resx">
+      <DependentUpon>FrmCierreCaja.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Login\FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
